--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
     <title>Jamal Abdul-Majid</title>
   </head>
   <body>
+    <!-- Navigation Bar -->
     <div class="container">
       <header>
         <nav class="navbar navbar-expand-sm navbar-light bg-light">
@@ -17,16 +18,19 @@
             </button>
             <div class="collapse navbar-collapse" id="navMenu">
               <ul class="navbar-nav ml-auto">
-                <li class="nav-item"><a href="#" class="nav-link">Home</a></li>
+                <li class="nav-item"><a href="#home" class="nav-link">Home</a></li>
                 <li class="nav-item"><a href="#" class="nav-link">Skills</a></li>
                 <li class="nav-item"><a href="#" class="nav-link">Projects</a></li>
-                <li class="nav-item"><a href="#" class="nav-link">Contacts</a></li>
+                <li class="nav-item"><a href="#" class="nav-link">Contact</a></li>
               </ul>
             </div>
         </nav>
       </header>
+      <!-- Home/About Me -->
+
       <section id="home">
-        <img src="" alt="">
+        <h1>Hey! My name is jamal abdul-majid</h1>
+        <h3>The day I created my first “Hello World”  in the console of my first app , I was hooked.</h3>
       </section>
 
 
