--- a/index.html
+++ b/index.html
@@ -12,25 +12,50 @@
     <div class="container">
       <header>
         <nav class="navbar navbar-expand-sm navbar-light bg-light">
-          <a href="#" class="navbar-brand">JAM</a>
             <button class="navbar-toggler" data-toggle="collapse" data-target="#navMenu">
               <span class="navbar-toggler-icon"></span>
             </button>
-            <div class="collapse navbar-collapse" id="navMenu">
-              <ul class="navbar-nav ml-auto">
-                <li class="nav-item"><a href="#home" class="nav-link">Home</a></li>
-                <li class="nav-item"><a href="#" class="nav-link">Skills</a></li>
-                <li class="nav-item"><a href="#" class="nav-link">Projects</a></li>
-                <li class="nav-item"><a href="#" class="nav-link">Contact</a></li>
+            <div class="collapse navbar-collapse justify-content-center" id="navMenu">
+              <ul class="navbar-nav">
+                <li class="nav-item grey"><a href="#home" class="nav-link">Home</a></li>
+                <li class="nav-item"><a href="#skills" class="nav-link">Skills</a></li>
+                <li class="nav-item"><a href="#projects" class="nav-link">Projects</a></li>
+                <li class="nav-item"><a href="#contacts" class="nav-link">Contact</a></li>
               </ul>
+
             </div>
         </nav>
+
       </header>
       <!-- Home/About Me -->
 
       <section id="home">
-        <h1>Hey! My name is jamal abdul-majid</h1>
-        <h3>The day I created my first “Hello World”  in the console of my first app , I was hooked.</h3>
+
+        <div class="console">
+          <div id="bar">
+            <div id="red">
+            </div>
+            <div id="yellow">
+            </div>
+            <div id="green">
+            </div>
+          </div>
+            <div id="screen">
+              <div class="typewriter">
+                <h2 class="font">Softwere development is more then just a career it's my passion!</h2>
+              </div>
+            </div>
+
+        </div>
+
+      </section>
+      <section id="skills">
+        <img  id="picture" src="./resources/img/jay2.jpg" alt="">
+        
+
+
+
+
       </section>
 
 
@@ -51,10 +76,10 @@
 
 
 
-
-
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.1/jquery.min.js"></script>
     <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
+    <script src="./js/index.js"></script>
   </body>
 </html>
