working on about me page

--- a/index.html
+++ b/index.html
@@ -49,14 +49,35 @@
         </div>
 
       </section>
-      <section id="skills">
+      <section id="aboutMe">
+        <header>
+          <h1>Who am I...</h1>
+        </header>
+        <h4> Hey! My name is Jamal and i'm proud to be a sefl taught Front End Devloper.</h4>
+        <p>The day I created my first “Hello World”  in the console of my first app , I was hooked . That day I knew I had finally found my passion. Software development has never been ”just a job” for me it became apart of my identity. development provides me with the unique opportunity to constantly engage in new challenges forcing me to grow as a individual and allow me to refine my new skills everyday. Bellow you’ll find projects I’ve completed that showcase my skills and general background in developing software. </p>
         <img  id="picture" src="./resources/img/jay2.jpg" alt="">
-        
+
+
+      </section>
+      <section id="skills">
+        <div class="container-1">
+          <header>
+            <h1>Skills</h1>
+          </header>
+
+
+
+
+        </div>
+
+
+
 
 
 
 
       </section>
+
 
 
 
