editing project viewmore button

--- a/index.html
+++ b/index.html
@@ -5,11 +5,12 @@
     <link href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
     <link rel="stylesheet" href="./css/style.css">
     <meta name="viewport" content="width=device-width, initial-sale=1">
+    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.8.2/css/all.css" integrity="sha384-oS3vJWv+0UjzBfQzYUhtDYW+Pj2yciDJxpsK1OYPAYjqT085Qq/1cq5FLXAZQ7Ay" crossorigin="anonymous">
     <title>Jamal Abdul-Majid</title>
   </head>
   <body>
     <!-- Navigation Bar -->
-    <div class="container">
+    <div class="container-1">
       <header>
         <nav class="navbar navbar-expand-sm navbar-light bg-light">
             <button class="navbar-toggler" data-toggle="collapse" data-target="#navMenu">
@@ -54,26 +55,110 @@
           <h1>Who am I...</h1>
         </header>
         <h4> Hey! My name is Jamal and i'm proud to be a sefl taught Front End Devloper.</h4>
-        <p>The day I created my first “Hello World”  in the console of my first app , I was hooked . That day I knew I had finally found my passion. Software development has never been ”just a job” for me it became apart of my identity. development provides me with the unique opportunity to constantly engage in new challenges forcing me to grow as a individual and allow me to refine my new skills everyday. Bellow you’ll find projects I’ve completed that showcase my skills and general background in developing software. </p>
-        <img  id="picture" src="./resources/img/jay2.jpg" alt="">
+      <p>The day I created my first “Hello World”  in the console of my first app , I was hooked . That day I knew I had finally found my passion. Software development has never been "just a job" for me it became apart of my identity. development provides me with the unique opportunity to constantly engage in new challenges forcing me to grow as a individual and allow me to refine my new skills everyday. Bellow you’ll find projects I’ve completed that showcase my skills and general background in developing software. </p>
+      <!-- <img  id="picture" src="./resources/img/jay2.jpg" alt=""> -->
 
 
       </section>
       <section id="skills">
-        <div class="container-1">
+        <div class="container">
           <header>
             <h1>Skills</h1>
           </header>
-
-
-
-
+          <div class="row">
+            <div class="col-sm-3 col">
+              <h5><i class="fab fa-html5 fa-3x"></i>
+                Html5
+              </h5>
+            </div>
+            <div class="col-sm-3 col">
+              <h5><i class="fab fa-css3-alt fa-3x"></i>
+                Css
+              </h5>
+            </div>
+            <div class="col-sm-3 col">
+              <h5><i class="fab fa-js fa-3x"></i>
+                JavaScript
+              </h5>
+            </div>
+            <div class="col-sm-3 col">
+              <h5><i class="fas fa-cube fa-3x"></i>
+                WebPack
+              </h5>
+            </div>
+            <div class="col-sm-3 col">
+              <h5><i class="fab fa-node-js fa-3x"></i>
+                Node.js
+              </h5>
+            </div>
+            <div class="col-sm-3 col">
+              <h5><i class="far fa-file-code fa-3x"></i>
+                jquery
+              </h5>
+            </div>
+            <div class="col-sm-3 col">
+              <h5><i class="fab fa-git-alt fa-3x"></i>
+                Git
+              </h5>
+            </div>
+            <div class="col-sm-3 col">
+              <h5><i class="fab fa-github fa-3x"></i>
+                Github
+              </h5>
+            </div>
+            <div class="col-sm-3 col">
+              <h5><i class="fas fa-sync-alt fa-3x"></i>
+                Ajax
+              </h5>
+            </div>
+            <div class="col-sm-3 col">
+              <h5><i class="fas fa-cogs fa-3x"></i>
+                Problem Solver
+              </h5>
+            </div>
+          </div>
+          <hr>
         </div>
+      </section>
+      <section id="projects">
+        <div class="wrapper">
+          <header>
+            <h1>Projects</h1>
+          </header>
+          <div class="grid-wrapper">
+              <div class="pr project1">
+                <div class="popup p1">
+                  <h2></h2>
+                  <button type="button" class="viewMore">View More</button>
+                </div>
+              </div>
+              <div class="pr project2">
+                <div class="popup p2">
 
+                </div>
+              </div>
+              <div class="pr project3">
+                <div class="popup p3">
 
+                </div>
+              </div>
+              <div class="pr project4">
+                <div class="popup p4">
 
+                </div>
+              </div>
+              <div class="pr project5">
+                <div class="popup p5">
 
+                </div>
+              </div>
+              <div class="pr project6">
+                <div class="popup p16>
 
+                </div>
+              </div>
+          </div>
+        </div>
 
 
       </section>
