--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
                 <li class="nav-item grey"><a href="#home" class="nav-link">Home</a></li>
                 <li class="nav-item"><a href="#skills" class="nav-link">Skills</a></li>
                 <li class="nav-item"><a href="#projects" class="nav-link">Projects</a></li>
-                <li class="nav-item"><a href="#contacts" class="nav-link">Contact</a></li>
+                <li class="nav-item"><a href="#contact" class="nav-link">Contact</a></li>
               </ul>
 
             </div>
@@ -56,9 +56,6 @@
         </header>
         <h4> Hey! My name is Jamal and i'm proud to be a sefl taught Front End Devloper.</h4>
       <p>The day I created my first “Hello World”  in the console of my first app , I was hooked . That day I knew I had finally found my passion. Software development has never been "just a job" for me it became apart of my identity. development provides me with the unique opportunity to constantly engage in new challenges forcing me to grow as a individual and allow me to refine my new skills everyday. Bellow you’ll find projects I’ve completed that showcase my skills and general background in developing software. </p>
-      <!-- <img  id="picture" src="./resources/img/jay2.jpg" alt=""> -->
-
-
       </section>
       <section id="skills">
         <div class="container">
@@ -128,43 +125,66 @@
           <div class="grid-wrapper">
               <div class="pr project1">
                 <div class="popup p1">
-                  <h2></h2>
+                  <h2>Project</h2>
                   <button type="button" class="viewMore">View More</button>
                 </div>
               </div>
               <div class="pr project2">
                 <div class="popup p2">
-
+                  <h2>Project</h2>
+                  <button type="button" class="viewMore">View More</button>
                 </div>
               </div>
               <div class="pr project3">
                 <div class="popup p3">
-
+                  <h2>Project</h2>
+                  <button type="button" class="viewMore">View More</button>
                 </div>
               </div>
               <div class="pr project4">
                 <div class="popup p4">
-
+                  <h2>Project</h2>
+                  <button type="button" class="viewMore">View More</button>
                 </div>
               </div>
               <div class="pr project5">
                 <div class="popup p5">
-
+                  <h2>Project</h2>
+                  <button type="button" class="viewMore">View More</button>
                 </div>
               </div>
               <div class="pr project6">
-                <div class="popup p16>
-
+                <div class="popup p6">
+                  <h2>Project</h2>
+                  <button type="button" class="viewMore">View More</button>
                 </div>
               </div>
           </div>
         </div>
-
-
       </section>
-
-
-
+      <section id="contact">
+        <h1>Lets creat something amazing</h1>
+        <h5>"The strength of the team is each individual member. The strength of each member is the team." – Phil Jackson</h5>
+        <a class="social linkedin" target="_blank" href="https://www.linkedin.com/in/jamal-abdul-majid-0ab9ab177/">
+          <img src="./resources/img/2481054-48.png" alt="">
+        </a>
+        <a class="social github" target="_blank" href="https://github.com/jamalabd">
+          <img src="./resources/img/2481061-48.png" alt="">
+        </a>
+        <div class="info">
+          <form class="formContact" action="index.js" method="get">
+            <input class="forms" type="email" name="email" id="email" placeholder="Email" value="">
+            <input class="forms" type="text" name="name" id="name" placeholder="Name" value="">
+            <input class="forms" type="tel" name="phone" id="phone" placeholder="Phone" pattern="[0-9]{3}-[0-9]{3}-[0-9]{4}" value="">
+            <textarea class="forms" name="message" rows="8" cols="80" placeholder="Message"></textarea>
+            <button  class="forms resume" type="button" name="resume" id="resume" >Download Resume</button>
+            <button class="forms" type="submit" name="submit" id="submit-btn">Submit</button>
+          </form>
+        </div>
+      </section>
+      <footer>
+        <h6>Copywrite Jamal Abdul-Majid 2019</h6>
+      </footer>
 
     </div>
 
