working on hamburger meue

--- a/index.html
+++ b/index.html
@@ -14,19 +14,20 @@
       <!-- Navigation Bar -->
       <header>
         <nav class="navbar navbar-expand-sm navbar-light bg-light">
-            <button class="navbar-toggler" data-toggle="collapse" data-target="#navMenu">
-              <span class="navbar-toggler-icon"></span>
+          <div class="hamburger-wrapper">
+            <button id="navbar-toggler" class="navbar-toggler bg-light" data-toggle="collapse" data-target="#navMenu">
+              <div class="line top"></div>
+              <div class="line middle"></div>
+              <div class="line bottom"></div>
             </button>
+          </div>
             <div class="collapse navbar-collapse justify-content-center" id="navMenu">
               <ul class="navbar-nav">
                 <li class="nav-item grey"><a href="#home" class="nav-link">Home</a></li>
                 <li class="nav-item"><a href="#skills" class="nav-link">Skills</a></li>
                 <li class="nav-item"><a href="#projects" class="nav-link">Projects</a></li>
                 <li class="nav-item"><a href="#contact" class="nav-link">Contact</a></li>
-                <li class="nav-item"><a href="#" Download="" class="nav-link resumeLink">Resume<svg width="32" height="32" xmlns="http://www.w3.org/2000/svg">
-                <rect fill="none" id="canvas_background" height="402" width="582" y="-1" x="-1"/>
-                <path fill="#1f1c1c" id="inbox-download" d="m16,15.9308l-3.25,-3.25l-0.75,0.75l4.5,4.5l4.5,-4.5l-0.75,-0.75l-3.25,3.25l0,-11l-1,0l0,11l0,0l0,0zm5,2l6.77502,0l0,0l-4.375,-7l-5.40002,0l0,-1l6,0l5,8l0,1l0,8l-25,0l0,-9l5,-8l6,0l0,1l-5.40002,0l-4.375,7l6.77502,0l0,2c0,1.10457 0.89586,2 1.99739,2l5.00522,0c1.10313,0 1.99739,-0.88773 1.99739,-2l0,-2l0,0z"/>
-              </svg></a></li>
+                <li class="nav-item"><a href="#" Download="" class="nav-link resumeLink">Resume <i class="fas fa-download"></i> </a></li>
               </ul>
             </div>
         </nav>
@@ -47,7 +48,7 @@
             <div id="screen">
               <div class="typewriter">
                 <h2 class="typewriterText size1">Softwere development is more then just a career it's my passion!</h2>
-                <h2 class="typewriterText size2">Welcome to my Sight!</h2>
+                <h2 class="typewriterText size2">Welcome to my site!</h2>
               </div>
             </div>
             <!-- End of Dumy Terminal -->
