add functionality to form

--- a/index.html
+++ b/index.html
@@ -28,6 +28,12 @@
                 <li class="nav-item"><a href="#projects" class="nav-link">Projects</a></li>
                 <li class="nav-item"><a href="#contact" class="nav-link">Contact</a></li>
                 <li class="nav-item"><a href="#" Download="" class="nav-link resumeLink">Resume <i class="fas fa-download"></i> </a></li>
+                <!-- Mobile links -->
+                <li data-toggle="collapse" data-target="#navMenu" class="nav-item mobile grey"><a href="#home" class="nav-link">Home</a></li>
+                <li data-toggle="collapse" data-target="#navMenu" class="nav-item mobile"><a href="#skills" class="nav-link">Skills</a></li>
+                <li data-toggle="collapse" data-target="#navMenu" class="nav-item mobile"><a href="#projects" class="nav-link">Projects</a></li>
+                <li data-toggle="collapse" data-target="#navMenu" class="nav-item mobile"><a href="#contact" class="nav-link">Contact</a></li>
+                <li data-toggle="collapse" data-target="#navMenu" class="nav-item mobile"><a href="#" Download="" class="nav-link resumeLink">Resume <i class="fas fa-download"></i> </a></li>
               </ul>
             </div>
         </nav>
